--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,5 +6,5 @@
   url: /bestel.html
 - title: VRAGEN
   url: /index.html#vragen
-- title: ERVARINGEN
+- title: RECENTIES
   url: /index.html#ervaring
